OO-5194: expiration date for user account